finally go the correct api generation working
